--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "express": "^4.15.2",
     "hammerjs": "^2.0.8",
     "jquery": "^3.5.1",
+    "jw-angular-pagination": "^1.2.0",
     "lodash": "^4.17.20",
     "ng-click-outside": "^7.0.0",
     "ng-otp-input": "^1.7.1",
