--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,5 +16,8 @@
     {
       "path": "./tsconfig.server.json"
     }
-]
+],
+  "compilerOptions": {
+    "allowSyntheticDefaultImports": true
+  }
 }
