--- a/package.json
+++ b/package.json
@@ -38,11 +38,13 @@
     "chart.js": "^2.9.3",
     "express": "^4.15.2",
     "hammerjs": "^2.0.8",
+    "jalali-moment": "^3.3.8",
     "jquery": "^3.5.1",
     "jw-angular-pagination": "^1.2.0",
     "lodash": "^4.17.20",
     "ng-click-outside": "^7.0.0",
     "ng-otp-input": "^1.7.1",
+    "ng2-jalali-date-picker": "2.4.2",
     "ng5-slider": "^1.2.4",
     "ngx-bootstrap": "^5.6.1",
     "ngx-device-detector": "^2.0.0",
