--- a/package.json
+++ b/package.json
@@ -31,7 +31,6 @@
     "@kolkov/ngx-gallery": "^1.2.3",
     "@nguniversal/express-engine": "^10.0.2",
     "@types/jquery": "^3.5.3",
-    "@types/moment-jalaali": "^0.7.4",
     "@web-aid-kit/ngx-image-gallery": "^1.0.0-beta",
     "@webcomponents/webcomponentsjs": "^2.4.4",
     "animate.css": "^4.1.1",
@@ -39,13 +38,13 @@
     "chart.js": "^2.9.3",
     "express": "^4.15.2",
     "hammerjs": "^2.0.8",
+    "jalali-moment": "^3.3.8",
     "jquery": "^3.5.1",
     "jw-angular-pagination": "^1.2.0",
     "lodash": "^4.17.20",
-    "moment-jalaali": "^0.9.2",
     "ng-click-outside": "^7.0.0",
     "ng-otp-input": "^1.7.1",
-    "ng-persian-datepicker": "^2.3.6",
+    "ng2-jalali-date-picker": "^2.4.2",
     "ng5-slider": "^1.2.4",
     "ngx-bootstrap": "^5.6.1",
     "ngx-device-detector": "^2.0.0",
