--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
     "lodash": "^4.17.20",
     "ng-click-outside": "^7.0.0",
     "ng-otp-input": "^1.7.1",
-    "ng2-jalali-date-picker": "^2.4.2",
+    "ng2-jalali-date-picker": "2.4.2",
     "ng5-slider": "^1.2.4",
     "ngx-bootstrap": "^5.6.1",
     "ngx-device-detector": "^2.0.0",
