--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "ngx-device-detector": "^2.0.0",
     "ngx-image-zoom": "^0.6.0",
     "ngx-owl-carousel-o": "^4.0.0",
+    "ngx-spinner": "^10.0.1",
     "primeflex": "^2.0.0",
     "primeicons": "^4.0.0",
     "primeng": "^10.0.0",
